--- a/index.html
+++ b/index.html
@@ -73,6 +73,51 @@
         </div>
     </section>
 
+    <section class="about" id="about">
+        <div class="about-content">
+            <div class="about-left">
+                <h2 class="section-title">About Me</h2>
+                <h3 class="section-subtitle">Aspiring Cybersecurity Enthusiast & Web Developer</h3>
+                <p class="about-text">
+                    As an aspiring cybersecurity enthusiast and web developer, I am passionate about learning the latest security trends, ethical hacking, and building secure web applications. I'm dedicated to honing my skills and actively working on projects that improve my understanding of cybersecurity and web development.
+                </p>
+                
+                <div class="stats-container">
+                    <div class="stat-item">
+                        <div class="stat-number">
+                            <span class="counter" data-target="1">0</span>
+                            <span class="plus">+</span>
+                        </div>
+                        <div class="stat-label">Year Experience</div>
+                    </div>
+                    <div class="stat-item">
+                        <div class="stat-number">
+                            <span class="counter" data-target="10">0</span>
+                            <span class="plus">+</span>
+                        </div>
+                        <div class="stat-label">CTF Challenges Completed</div>
+                    </div>
+                    <div class="stat-item">
+                        <div class="stat-number">
+                            <span class="counter" data-target="7">0</span>
+                            <span class="plus">+</span>
+                        </div>
+                        <div class="stat-label">Web Development Projects</div>
+                    </div>
+                </div>
+            </div>
+            
+            <div class="about-right">
+                <div class="photo-container">
+                    <svg class="photo-outline" viewBox="0 0 100 100">
+                        <path class="draw-outline" d="M10,10 h80 v80 h-80 z" fill="none" stroke="#2c2c2c" stroke-width="2"/>
+                    </svg>
+                    <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftse4.mm.bing.net%2Fth%3Fid%3DOIP.FLzot2wT6M4IO1NOui9i6QHaEK%26pid%3DApi&f=1&ipt=9c915ca6f1e1d6d035d81f0d17fa37d2804dc3acd7064b26fc4af43d2ea949ea&ipo=images" alt="Arbaaz Khan" class="profile-photo">
+                </div>
+            </div>
+        </div>
+    </section>
+
     <script src="script.js"></script>
 </body>
 </html>
